added some sections to the documentation

--- a/doc/paper/references.tex
+++ b/doc/paper/references.tex
@@ -1,11 +1,21 @@
-\begin{thebibliography}{99} % Bibliography - this is intentionally simple in this template
+\begin{thebibliography}{99}
 
-% TODO remove demo references
+\bibitem[Heyer et al., 2006]{Heyer:2006}
+Heyer, G., Quasthoff U. und Wittig, T. (2006)
+\newblock Text Mining: Wissensrohstoff Text: Konzepte, Algorithmen,
+Ergebnisse
 
-\bibitem[Figueredo and Wolf, 2009]{Figueredo:2009dg}
-Figueredo, A.~J. and Wolf, P. S.~A. (2009).
-\newblock Assortative pairing and life history strategy - a cross-cultural
-  study.
-\newblock {\em Human Nature}, 20:317--330.
+\bibitem[Cunningham, 2000]{Cunningham:2000}
+Cunningham, H. (2000)
+\newblock Software Architecture for Language Engineering
+
+\bibitem[Cunningham et al., 2002]{Cunningham:2002}
+Cunningham, H., Maynard, D., Bontcheva, K. und Tablan V. (2002)
+\newblock GATE: an Architecture for Development of Robust HLT
+Applications
+
+\bibitem[Snow et al, 2004]{Snow:2004}
+Snow, R., Jurafsky, D. und Ng, Y. A. (2004)
+\newblock Learning syntactic patterns for automatic hypernym discovery
 
 \end{thebibliography}
