--- a/doc/paper/textmining.tex
+++ b/doc/paper/textmining.tex
@@ -3,6 +3,8 @@
 \usepackage[ngerman]{babel} 
 \usepackage[utf8]{inputenc} 
 
+\usepackage{listings}
+
 \usepackage[sc]{mathpazo} 
 \usepackage[T1]{fontenc} 
 \linespread{1.05} 
