added hearst patterns

--- a/doc/presentation/vortrag1/main.tex
+++ b/doc/presentation/vortrag1/main.tex
@@ -12,8 +12,9 @@
 
 \usetheme{Rochester}
 \usecolortheme{beaver}
-
 \beamertemplatenavigationsymbolsempty
+
+\usetikzlibrary{fit,positioning,arrows}
 
 \title{Text Mining}
 \author{Andr\'{e} Vogler, Torsten Braun}
@@ -36,5 +37,5 @@
 	\frame{\titlepage}
 	\frame{\frametitle{Agenda}\tableofcontents}
 	
-	\input{frames}	
+	\input{frames}
 \end{document}
