added perspective frames

--- a/doc/presentation/vortrag1/frames.tex
+++ b/doc/presentation/vortrag1/frames.tex
@@ -2,3 +2,4 @@
 \input{sections/002_gate_annie.tex}
 \input{sections/003_hearst_patterns.tex}
 \input{sections/004_example.tex}
+\input{sections/005_future.tex}
