--- a/doc/presentation/vortrag1/main.tex
+++ b/doc/presentation/vortrag1/main.tex
@@ -1,4 +1,4 @@
-\documentclass{beamer}
+\documentclass[notes]{beamer}
 
 \usepackage[ngerman]{babel}
 \usepackage[utf8]{inputenc}
@@ -9,12 +9,16 @@
 \usepackage{ragged2e}
 \usepackage{color}
 \usepackage{listings}
+\usepackage{scalefnt}
+%\usepackage{pgfpages}
 
 \usetheme{Rochester}
 \usecolortheme{beaver}
 \beamertemplatenavigationsymbolsempty
 
 \usetikzlibrary{fit,positioning,arrows}
+
+%\setbeameroption{show notes on second screen}
 
 \title{Text Mining}
 \author{Andr\'{e} Vogler, Torsten Braun}
