Arbeit am Vortrag
Arbeit am Vortrag

--- a/doc/presentation/vortrag1/sections/001_introduction.tex
+++ b/doc/presentation/vortrag1/sections/001_introduction.tex
@@ -5,6 +5,21 @@
   \frametitle{Übersicht}
 
   \begin{itemize}
-  \item TODO
+  \item Ziel: Informationsgewinnung durch Text-Mining
+  \item Zwischenziele:
+  \begin{itemize}
+    \item \color{green}Erkennung der Named Entities durch GATE/ANNIE
+    \item Implementation der Hearst-Patterns
+    \item \color{red}Informationsgewinnung durch Pendelalgorhytmus
+  \end{itemize}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{GATE/ANNIE}
+  \begin{itemize}
+    \item Open Source Software zur Text Analyse
+    \item seit über 15 Jahren in Entwicklung
+    \item 
   \end{itemize}
 \end{frame}
