Voläufige Version Vortrag

--- a/doc/presentation/vortrag1/sections/001_introduction.tex
+++ b/doc/presentation/vortrag1/sections/001_introduction.tex
@@ -20,6 +20,7 @@
   \begin{itemize}
     \item Open Source Software zur Text Analyse
     \item seit über 15 Jahren in Entwicklung
-    \item 
+    \item ANNIE - A Nearly-New Information Extraction System
+    \item Entwickelt an der University of Sheffield
   \end{itemize}
 \end{frame}
