--- a/doc/presentation/vortrag2/sections/002_hearst_patterns.tex
+++ b/doc/presentation/vortrag2/sections/002_hearst_patterns.tex
@@ -102,3 +102,26 @@
     \end{tikzpicture}
   \end{center}
 \end{frame}
+
+\begin{frame}
+  \frametitle{Hearst Patterns - Beispiele}
+
+  \begin{itemize}
+  \item NP(,)\{0,1\} (such as$\vert$like)
+    NP((,$\vert$ or$\vert$ and)\{0,1\} NP)*
+    \begin{itemize}
+    \item ... car like Audi or Mercedes ...
+    \end{itemize}~\\
+
+  \item Such(,)\{0,1\} NP as NP((,$\vert$ or$\vert$ and) NP)*
+    \begin{itemize}
+    \item Such car as Audi and Mercedes ...
+    \end{itemize}~\\
+
+  \item NP((,$\vert$ or$\vert$ and) NP)* and  other NP
+    \begin{itemize}
+    \item Audi or Mercedes and other cars ...
+    \end{itemize}
+
+  \end{itemize}
+\end{frame}
