--- a/doc/presentation/vortrag2/sections/003_results.tex
+++ b/doc/presentation/vortrag2/sections/003_results.tex
@@ -13,3 +13,14 @@
     \end{itemize}
   \end{itemize}
 \end{frame}
+
+\begin{frame}
+  \frametitle{Ergebnisse - Beispiele}
+
+  %TODO gute und schlecht erkannte Wörter mit Textauszug hinzufügen
+  %(je 2 Beispiele)
+
+  Key => Values
+
+  Textauszug
+\end{frame}
