--- a/doc/docu/textmining.tex
+++ b/doc/docu/textmining.tex
@@ -34,10 +34,12 @@
 \pagestyle{fancy} 
 \fancyhead{} 
 \fancyfoot{} 
-\fancyhead[C]{Untersuchung von Texten mittels Hearst Pattern mit Hilfe der Tools Gate und ANNIE} 
+\fancyhead[C]{Untersuchung der korolation von Hypernym- und
+  Hyponymbeziehungen unter Verwendung von Hearst Patterns} 
 \fancyfoot[RO,LE]{\thepage} 
 
-\title{\vspace{-15mm}\fontsize{24pt}{10pt}\selectfont\textbf{Untersuchung von Texten mittels Hearst Pattern mit Hilfe der Tools Gate und ANNIE}} 
+\title{\vspace{-15mm}\fontsize{20pt}{10pt}\selectfont\textbf{Untersuchung der korolation von Hypernym- und
+  Hyponymbeziehungen unter Verwendung von Hearst Patterns}} 
 
 \author{
 \large
