--- a/doc/docu/abstract.tex
+++ b/doc/docu/abstract.tex
@@ -1,5 +1,5 @@
 \begin{abstract}
 
-\noindent Zur Analyse der immer größer werden Datenmengen im Datenmengen wird das Werkzeug des Text-Minings immer wichtiger. Im vorliegenden Forschungsseminar wurde zu diesem Zweck die Verwendbarkeit von Hearst-Patterns zum Aufbau von Hypernym-/Hyponymbeziehungen utnersucht. Im ersten Schritt wurden dazu mit GATE/ANNIE und NLTK zwei vorhandene Bibliotheken verwendet und sich auf Grund der besseren Performanz für NLTK entschieden. Im folgenden wurden erste Hearst-Patterns in NLTK implementiert und erste Testläufe mit diesen durchgeführt. Als Ergebnis dieser ersten Tests lässt sich als Ergebnis festhalten, dass Hearst-Patterns als alleiniges Mittel ungeeignet sind. In einem anschließenden Forschungssemester sollen Mittel erforscht werden diese Ergebnisse zu verfeinern.
+\noindent Zur Analyse der immer größer werden Datenmengen, wird das Werkzeug des Text-Minings immer wichtiger. Im vorliegenden Forschungsseminar wurde zu diesem Zweck die Verwendbarkeit von Hearst-Patterns zum Aufbau von Hypernym-/Hyponymbeziehungen untersucht. Im ersten Schritt wurden dazu mit GATE/ANNIE und NLTK zwei vorhandene Bibliotheken getestet und sich auf Grund der besseren Performanz für NLTK entschieden. Im folgenden wurden erste Hearst-Patterns in NLTK implementiert und erste Testläufe mit diesen durchgeführt. Als Ergebnis dieser ersten Tests lässt festhalten, dass Hearst-Patterns als alleiniges Mittel ungeeignet sind. In einem anschließenden Forschungssemester sollen Mittel erforscht werden diese Ergebnisse zu verfeinern.
 
 \end{abstract}
