--- a/doc/docu/textmining.tex
+++ b/doc/docu/textmining.tex
@@ -34,11 +34,11 @@
 \pagestyle{fancy} 
 \fancyhead{} 
 \fancyfoot{} 
-\fancyhead[C]{Untersuchung der korolation von Hypernym- und
+\fancyhead[C]{Untersuchung der Korrelation von Hypernym- und
   Hyponymbeziehungen unter Verwendung von Hearst Patterns} 
 \fancyfoot[RO,LE]{\thepage} 
 
-\title{\vspace{-15mm}\fontsize{20pt}{10pt}\selectfont\textbf{Untersuchung der korolation von Hypernym- und
+\title{\vspace{-15mm}\fontsize{20pt}{10pt}\selectfont\textbf{Untersuchung der Korrelation von Hypernym- und
   Hyponymbeziehungen unter Verwendung von Hearst Patterns}} 
 
 \author{
