--- a/doc/docu/textmining.tex
+++ b/doc/docu/textmining.tex
@@ -2,6 +2,7 @@
 
 \usepackage[ngerman]{babel} 
 \usepackage[utf8]{inputenc} 
+\usepackage{graphicx}
 
 \usepackage{listings}
 
@@ -58,6 +59,7 @@
 
   \begin{multicols}{2}
     \input{contents}
+    \newpage
     \input{references}
   \end{multicols}
 \end{document}
