--- a/doc/docu/contents.tex
+++ b/doc/docu/contents.tex
@@ -1,43 +1,24 @@
-\section{Gate und ANNIE}
+\section{Natural Language Toolkit (NLTK)}
 
-Gate (General Architecture for Text Engineering) ist ein Tool welches
-von der \textit{University of Sheffield} als freie Software entwickelt
-und eine erweiterebare Komponente zum analysieren und verarbeiten von
-Texten in natürlicher Sprache bietet.
-\cite{Cunningham:2000}
+NLTK\footnote{\href{http://www.nltk.org/}{NLTK: http://www.nltk.org/}} ist eine Python Bibliothek um natürliche Sprache zu verarbeiten.
+Dabei nutzen wir die Funktionen zur Klassifizierung der einzelnen
+Textbausteine. Dabei liefert NLTK eine Liste von Paaren, die den
+kompletten Text als einzelne Tokens mit ihrer gegebenen
+Klassifizierung darstellt.
 
-ANNIE (A Nearly-New Information Extraction System) ist ein Plugin für
-Gate mit dem es möglich ist einen Corpus zu klassifizieren. Dafür
-besitzt es einen Tokeniser, Sentence splitter, Part-of-speech tagger,
-gezetterer und finite sentence transducter.
-\cite{Cunningham:2002}
-
-Für unsere Implementierung haben wir eine neue Klasse \textbf{ANNIE}
-angelegt, die das Plugin initialisiert. Gate muss dafür bereits in der
-Hauptroutine geladen werden, dabei muss der Pfad zu den Gate Resourcen
-und den Plugins angegeben werden. ANNIE wurde so implementiert, dass
-beim Erzeugen einer neuen Instanz der Corpus als \lstinline{String}
-übergeben werden kann. Dieser wird dann analysiert und kann in dann
-über eine Methode als annotierter Text zurückgegeben werden. 
-% TODO Infos wie der Text annotiert wird hinzufügen 
-
-Die Generierung des \lstinline{StructuredDocument} mit Annotationen im
-Corpus, nachdem die Verarbeitung von ANNIE abgeschlossen wurde hat
-eine Laufzeit von
-$$\mathcal{O}(2a \cdot log(a))$$ % TODO Beweis? Korrektur?
-
-wobei $a$ die Anzahl der für die Rückgabe relevanten Annotationen ist.
-
+Zum Klassifizieren bietet NLTK eine vielzahl von Algorithmen an, wir
+verwenden für unsere Untersuchung den \textit{BrillTagger}, da dieser
+laut Dokumentation eine sehr gute Erkennunsrate aufweist.
 
 \section{Hearst Patterns}
 
-Herst Patterns werden verwendet um \textit{Hyponyme} für ein gegebenes
+Hearst Patterns werden verwendet um \textit{Hyponyme} für ein gegebenes
 \textit{Hyperonym} zu finden. Dabei gelten folgende Regeln
 $$R \subseteq M \times M$$
 $$\forall x, y, z \in M : xRy \land yRz \Rightarrow xRz$$
 $$\forall x \in M : \neg xRx$$
-$$\forall x, y \in M : xRy \Rightarrow \neg (yRx)$$
-
+$$\forall x, y \in M : xRy \Rightarrow \neg (yRx)$$%
+%
 wobei $M$ die Menge aller Wörter der entsprechenden Sprache ist.
 % TODO Quelle hinzufügen (aktuell Wikipedia ~> dort keine Quelle
 % angegben -.-)
@@ -45,7 +26,7 @@ wobei $M$ die Menge aller Wörter der entsprechenden Sprache ist.
 Um die entsprechenden Hyponyme in einem Corpus zu finden, werden
 bestimmte Muster in Texten gesucht, die folgende Liste zeigt die
 verwendeten Patterns, dabei ist $NP_{X}$ das Hyponym und $NP_{Y}$ das
-dazugehörige Hyperonym.
+dazugehörige Hypernym.
 
 \begin{itemize}
 \item $NP_{X}$ and other $NP_{Y}$
@@ -54,19 +35,35 @@ dazugehörige Hyperonym.
 \item Such $NP_{Y}$ as $NP_{X}$
 \item $NP_{Y}$ including $NP_{X}$
 \item $NP_{Y}$, especially $NP_{X}$
-\end{itemize}
-
-So können Hyponyme zu entsprechenden Hyperonymen gefunden werden.
+\end{itemize}%
+%
+So können Hyponyme zu entsprechenden Hypernymen gefunden werden.
 \cite{Snow:2004}
 
-In unserer Implementierung verwenden wir reguläre Ausdrücke um nach
-den Mustern zu suchen und gleichen dies zunächst mit den Ergebnissen
-von ANNIE ab. So kann zuerst sichergestellt werden, dass es sich um
-zwei gefundene Nomen handelt. Zudem müssen alle beschriebenen Regeln
-eingehalten werden. Ist dies der Fall kann die Anwendung ein neues
-Hyponym und falls noch nicht vorhanden ein neues Hyperonym lernen.
+In unserer
+Implementierung\footnote{\href{https://github.com/tbraun89/research-textmining}{Github:
+ https://github.com/tbraun89/research-textmining}} verwenden wir einen deterministischen
+Automaten (DFA), der als Eingabe die Liste von Paaren des Textes
+erhällt und so in einer Laufzeit von $\mathcal{O}(n)$ alle Beziehungen
+findet. Die Ergebnisse des DFA werden dann in einer Datei gespeichert
+um weitere Untersuchungen damit durchführen zu können.
+~\\~\\
 
+\begin{centering}
+  \includegraphics[scale=0.75]{img/hpdfa}
+\end{centering}
 
-\section{WordNet}
+\section{Aktuelle Ergebnisse}
 
-% TODO Wordnet zum validieren der Hyperonyme und Hyponyme ~> siehe Snow:2004
+Für die aktuelle Untersuchung haben wir den \textit{Open American
+National Corpus} (ONAC) verwendet. Dieser besteht aus 11.939.180 
+Wörtern. Mit unserem DFA konnten wir nach der Klassifizierung durch
+NLKT 2.716 Hypernyme mit 21.028 Hyponymen erkennen.
+
+An den Gefundenen Daten kann mann erkennen, dass die Qualität der
+gefundenen Beziehungen in nur ca. 50\% der Ergebnisse korrekt ist. Es
+werden auch sehr viele Beziehungen gefunden, die zwar den Patterns
+entsprechen, allerdings sprachlich keine Beziehungen sind. Dies zeigt,
+das rein die Verwendung von Hearst Patterns nicht ausreicht, um
+Hypernym- und Hyponymbeziehungen in Texten zu erkennen und eine
+nachträgliche Selektierung der Ergebnisse notwendig ist.
