--- a/doc/docu/textmining.tex
+++ b/doc/docu/textmining.tex
@@ -58,8 +58,8 @@
   \input{abstract}
 
   \begin{multicols}{2}
-    \input{contents}
-    \newpage
-    \input{references}
+    \input{introduction}
+    \input{methods}
+    \input {results}
   \end{multicols}
 \end{document}
