--- a/doc/docu/abstract.tex
+++ b/doc/docu/abstract.tex
@@ -1,5 +1,5 @@
 \begin{abstract}
 
-\noindent Zur Analyse der immer größer werden Datenmengen, wird die Methode des Text-Minings immer wichtiger. Im vorliegenden Forschungsseminar wurde zu diesem Zweck die Verwendbarkeit von Hearst-Patterns zum Aufbau von Hypernym-/Hyponymbeziehungen untersucht. Im ersten Schritt wurden dazu mit GATE/ANNIE und NLTK zwei vorhandene Bibliotheken getestet und sich auf Grund der besseren Performanz für NLTK entschieden. Im folgenden wurden erste Hearst-Patterns in NLTK implementiert und erste Testläufe mit diesen durchgeführt. Als Ergebnis dieser ersten Tests lässt sich festhalten, dass Hearst-Patterns Ergebnisse mit einer großen Anzahl falscher Beziehungen liefert und somit als alleiniges Mittel ungeeignet sind. In einem anschließenden Forschungssemester sollen Mittel erforscht werden diese Ergebnisse zu verfeinern.
+\noindent Zur Analyse der immer größer werden Datenmengen, wird die Methode des Text-Minings immer wichtiger. Im vorliegenden Forschungsseminar wurde zu diesem Zweck die Verwendbarkeit von Hearst-Patterns zum Aufbau von Hypernym-/Hyponymbeziehungen untersucht. Im ersten Schritt wurde dazu ein geeignetes Tool gesucht auf Grund von Funktionsumfang und Performanz wurde sich für NLTK entschieden. Im folgenden wurden ausgewählte Hearst-Patterns in NLTK implementiert und Testläufe mit diesen durchgeführt. Als Ergebnis dieser ersten Tests lässt sich festhalten, dass Hearst-Patterns Ergebnisse mit einer großen Anzahl falscher Beziehungen liefert und somit als alleiniges Mittel ungeeignet sind. In einem anschließenden Forschungssemester sollen Mittel erforscht werden diese Ergebnisse zu verfeinern.
 
 \end{abstract}
