--- a/doc/docu/introduction.tex
+++ b/doc/docu/introduction.tex
@@ -1,2 +1,25 @@
 \section{Einleitung}
 
+In unserer Arbeit haben wir, im Bereich der linguistischen
+Datenverarbeitung, versucht, algorithmisch die semantische
+Beziehung der Hyponymie in englisch sprachigen Texten zu erkennen.
+Hyponymie beschreibt die semantische Beziehung zwischen zwei Wörtern,
+bei denen das Hyponym einem Hyperonym untergeordnet ist, da es eine
+spezielle Bedeutung hat. So ist z.B. Apfel ein Hyponym von Obst,
+welches dann das Hyperonym ist. \cite{bib:Glueck2005}
+
+Um eine solche Untersuchung durchführen zu können, haben wir einen
+Textkorpus -- eine große Sammlung von Texten und schriflichen
+Aufzeichnungen -- der englischen Sprache benötigt. Dafür haben wir den
+\textit{Open American National Corpus} (OANC) verwendet, dieser
+enthält in der aktuellen Auflage 11.934.180 Wörter in Form von
+wissenschaftlichen Texten, Briefen und schriflichen
+Sprachaufzeichnungen. Weitere Informatinen zu OANC bzw. \cite{bib:Ide2002}
+
+Zur Umsetzung haben wir das \textit{Natural Language Toolkit}
+(NLTK)\footnote{NLTK: \url{http://www.nltk.org/}},
+verwendet. Eine Bibliothek für die Programmiersprache Python, welche
+eine Sammlung von Akgorithmen und Datenstrukturen bereitstellt, die zur
+linguistischen Datenverarbeitung benötigt werden bzw. verwendet werden
+können. \cite{bib:Bird2006} Welche Teile der Bibliothek zum Einsatz
+kamen, wird später noch genauer erläutert.
