--- a/doc/docu/bibs.bib
+++ b/doc/docu/bibs.bib
@@ -14,6 +14,13 @@ year      = "2002",
 pages     = "839 -- 844"
 }
 
+@INPROCEEDINGS{bib:Snow2004,
+author    = "Rion Snow and Daniel Jurafsky and Andrew Y. Ng",
+title     = "{L}earning syntactic patterns for automatic hypernym discovery",
+booktitle = "Advances in Neural Information Processing Systems (NIPS 2004)",
+year      = "2004",
+}
+
 @INPROCEEDINGS{bib:Brill1992,
 author    = "Brill Eric",
 title     = "{A} {S}imple {R}ule-based {P}art of {S}peech {T}agger",
