--- a/doc/docu/textmining.tex
+++ b/doc/docu/textmining.tex
@@ -25,7 +25,7 @@
 \renewcommand{\abstractnamefont}{\normalfont\bfseries} 
 \renewcommand{\abstracttextfont}{\normalfont\small\itshape} 
 
-\usepackage[numbers]{natbib}
+\usepackage{harvard}
 
 \usepackage{titlesec} 
 \renewcommand\thesection{\Roman{section}} 
@@ -65,6 +65,6 @@
     \input {results}
 
     \bibliography{bibs}{}
-    \bibliographystyle{plainnat}
+    \bibliographystyle{agsm}
   \end{multicols}
 \end{document}
