--- a/doc/docu/methods.tex
+++ b/doc/docu/methods.tex
@@ -4,9 +4,13 @@ Als Vorarbeit für die Hearst Patterns ist es nötig den Text per Part of Speach
 Hierbei wird jedem Wort im Text mit Hilfe von statistischen Wahrscheinlichkeiten oder einem Satz von Regeln eine Klasse zugewiesen.
 In der vorliegenden Arbeit wurde hierfür der Brill Tagger genutzt. Dieser besitzt eine Liste von bekannten Worten mit zugehörigen
 Wahrscheinlichkeiten ihrer Klassenzugehörigkeit. In einem ersten Schritt wird allen bekannten Worten nun die Klasse mit der höchsten
-Standartwahrscheinlichkeit zugewiesen und alle unbekannten Worte werden an Hand von weiteren Regeln klassiefiziert. Großgeschriebene 
-unbekannte Wörter werden provisorisch als Nomen klassifiziert und Wörter mit dem Prefix \textit{ous} werden als Adjektive eingestuft,
-da die meisten der bekannten Wörter mit diesem Prefix als Adjektive klassifiziert sind. 
+Standartwahrscheinlichkeit zugewiesen und alle unbekannten Worte werden an Hand von weiteren Regeln klassiefiziert. Beispielsweise werden Großgeschriebene 
+unbekannte Wörter provisorisch als Nomen klassifiziert und Wörter mit dem Prefix \textit{ous} werden als Adjektive eingestuft,
+da die meisten der bekannten Wörter mit diesem Prefix als Adjektive klassifiziert sind. Sobald der Tagger den gesammten Text eingestuft hat, führt er
+mehrere Verbesserungsschritte aus die sich wieder auf die bereits bekannte Wortliste und deren statistischen Gegebenheiten beziehen. So wird z.B. 
+überprüft wie oft ein spezielles Wort provisorisch mit dem $Tag_{A}$ versehen wurde, am Ende der Klassifizierung aber mit $Tag_{B}$ versehen war. 
+Überschreitet dieser Wert eine gewisse Schwelle so wird das Wort mit $Tag_{B}$ versehen. Mit dieser und anderen Regeln erweitert und verbessert sich der
+Brill Tagger kontinuierlich selber und erzielt somit eine sehr geringe Fehlerrate, wie im Paper von \citename{bib:Brill1992} beschrieben.
 
 \subsection{Analyse mit Hilfe von Hearst Patterns}
 
