--- a/doc/docu/textmining.tex
+++ b/doc/docu/textmining.tex
@@ -37,12 +37,10 @@
 \pagestyle{fancy} 
 \fancyhead{} 
 \fancyfoot{} 
-\fancyhead[C]{Untersuchung der Korrelation von Hypernym- und
-  Hyponymbeziehungen unter Verwendung von Hearst Patterns} 
+\fancyhead[C]{Untersuchung der Hyponymie unter Verwendung von Hearst Patterns} 
 \fancyfoot[RO,LE]{\thepage} 
 
-\title{\vspace{-15mm}\fontsize{20pt}{10pt}\selectfont\textbf{Untersuchung der Korrelation von Hypernym- und
-  Hyponymbeziehungen unter Verwendung von Hearst Patterns}} 
+\title{\vspace{-15mm}\fontsize{20pt}{10pt}\selectfont\textbf{Untersuchung der Hyponymie unter Verwendung von Hearst Patterns}} 
 
 \author{
 \large
