--- a/doc/docu/bibs.bib
+++ b/doc/docu/bibs.bib
@@ -22,7 +22,7 @@ year      = "2004",
 }
 
 @INPROCEEDINGS{bib:Brill1992,
-author    = "Brill Eric",
+author    = "Eric Brill",
 title     = "{A} {S}imple {R}ule-based {P}art of {S}peech {T}agger",
 booktitle = "Proceedings of the Third Conference on Applied Natural Language Processing",
 series    = "ANLC '92",
