--- a/doc/docu/results.tex
+++ b/doc/docu/results.tex
@@ -12,8 +12,8 @@ untersucht und dabei herausgefunden, dass eine Hyponymie nur in ca.
 Beziehungen, somit ist diese Methode alleine nicht brauchbar um
 Hyponymie zwischen Wörtern automatisch zu erkennen. Folgend sind einige
 Auszüge aus den untersuchten Ergebnissen aufgeführt.%
-~\\~\\%
-\begin{tabularx}{\textwidth}{|l|X|}
+%
+\begin{longtable}{|l|l|}
   \hline
   \textbf{Hyperonym} & \textbf{Hyponym} \\
   \hline
@@ -26,8 +26,8 @@ Auszüge aus den untersuchten Ergebnissen aufgeführt.%
   people & Charles, Elvis, Ivan Julius,
   \textbf{pizza}, \textbf{look}, \textbf{that}, \textbf{thinks} \\
   \hline
-\end{tabularx}%
-~\\~\\~\\%
+\end{longtable}%
+~\\%
 Dabei sind die fett markierten Wörter fehlerhaft erkannte Hyponyme,
 die nicht in Beziehung zu ihrem angegebenen Hyperonym stehen.%
 \\%
