--- a/doc/docu/results.tex
+++ b/doc/docu/results.tex
@@ -1,9 +1,9 @@
 \section{Resultate}%
 %
-Durch die Auswertung mit unserem DFA haben wir aus den 11.939.180 Wörten
+Durch die Auswertung des verwendeten DFA haben wir aus den 11.939.180 Wörten
 die im OANC enthalten sind, 2.716 Hyperonyme erkennen können, welche
-mit 21.028 Hyponymen in Beziehung stehen. Die Erkennung strikt nach
-den definierten Hearst Patterns erfolgte, sind auch viele fehlerhafte
+mit 21.028 Hyponymen in Beziehung stehen. Auf Grund der strikten und ausschließlichen
+Anwendung der Hearst Patterns, sind auch viele fehlerhafte
 Beziehungen enthalten. Da die Analyse nur von Hand durchgeführt werden
 kann, haben wir eine Stichprobe\footnote{Die komplette Tabelle
   befindet sich im Anhang.} von 100 Hyperonymen mit 450 Hypoynmen
