--- a/doc/docu/results.tex
+++ b/doc/docu/results.tex
@@ -36,7 +36,6 @@ der Hearst Patterns angepasst werden, um so schon die Auswahl der
 Funde weiter zu begrenzen. Zusätlich könnte noch ein weiterer
 Schritt einegführt werden, der die Wahrscheinlichkeit berechnet, dass
 ein Hyponym wirklich in Beziehung zu seinem Hyperonym steht. Dafür
-müsste entweder ein neuer Algorithmus entwickelt werden, oder ein
+müsste entweder ein neuer Algorithmus entwickelt werden oder ein
 passendes Lernverfahren gefunden werden, um die Wahrscheinlichkeit zu
-maximieren, dass die gefunden Paare tatsächlich eine Hyponymie
-Bezeiehung haben.
+maximieren, dass die gefunden Paare tatsächlich eine Hyponymie bilden.
