--- a/doc/docu/introduction.tex
+++ b/doc/docu/introduction.tex
@@ -14,7 +14,7 @@ Aufzeichnungen -- der englischen Sprache benötigt. Dafür haben wir den
 \textit{Open American National Corpus} (OANC) verwendet, dieser
 enthält in der aktuellen Auflage 11.934.180 Wörter in Form von
 wissenschaftlichen Texten, Briefen und schriflichen
-Sprachaufzeichnungen. Weitere Informatinen zu OANC bzw. \cite{bib:Ide2002}%
+Sprachaufzeichnungen. \cite{bib:Ide2002}%
 \\%
 Zur Umsetzung haben wir das \textit{Natural Language Toolkit}
 (NLTK)\footnote{NLTK: \url{http://www.nltk.org/}},
